add html out of src and in src

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <main>
         <div class="mn-cont flex2">
             <div class="loc">
-                <img src="../assets/images/location-dot-solid.svg" alt="">
+                <img src="
+                assets/images/location-dot-solid.svg" alt="">
             </div>
             <div class="content flex2 font3">
                 <p class="error"></p>
@@ -28,7 +29,7 @@
                     <p>Check your weather</p>
                     <input type="text" placeholder="Enter Location" id="location">
                     <button class="search">
-                        <img src="../assets/images/magnifying-glass-solid.svg" alt="">
+                        <img src="assets/images/magnifying-glass-solid.svg" alt="">
                     </button>
                 </div>
                 <div class="hide">
