--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/styles.css">
+    <script src="src/jquery-3.7.1.js"></script>
     <script src="src/weather.js"></script>
     <title>weatherapp</title>
 </head>
